--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
     </main>
 
 
-    <footer></footer>
+    <footer>
+        Desenvolvido por: Marla Ingridh 
+    </footer>
 
 
     <script src="script.js"></script>
